--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
      
     <footer class="page-footer">
         <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and 
+        <a href="./index.html"></a>
+        <p class="footer-text"> Increase the flow of customers and 
            sales for your business with digital 
            marketing & growth solutions.
         </p>
