--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@0,700;500;400;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/styles.css"
+    <link rel="stylesheet" href="./css/styles.css"
 </head>
 <body>
        
