--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     </title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@0,700;500;400;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/styles.css"
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
        
     <header class="page-header">
     <nav class="header-nav">
         <a class="logo header-logo" href="./index.html"
-            >Web<span class="logo-part">Studio</span></a
+            >Web<span class="logo-part">Studio</span></a>
                
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
