--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
         <address class="contacts">
-            <ul class="contacts-list" class="list">
+            <ul class="contacts-list list">
                 <li class="contacts-items"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="contacts-items"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
@@ -95,9 +95,10 @@
     </main>
      
     <footer class="page-footer">
-        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a
-        <a href="./index.html"></a>
-        <p class="footer-text"> Increase the flow of customers and 
+        <a class="logo footer-logo" href="./index.html">Web<span
+             class="logo-part">Studio</span></a>
+        <p class="footer-text"> 
+            Increase the flow of customers and 
            sales for your business with digital 
            marketing & growth solutions.
         </p>
