--- a/index.html
+++ b/index.html
@@ -48,46 +48,47 @@
             <h2>Features</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <h3 class="title ">Strategy</h3>
+                    <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <h3 class="title">Punctuality</h3>
+                    <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                    <h3 class="title">Diligence</h3>
+                    <p class="text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <h3 class="title">Technologies</h3>
+                    <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
 
-        <section id="section-3">
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+        <section id="section-3"
+        class="our-team">
+            <h2 class="title-team">Our Team</h2>
+            <ul clas="team-list">
+                <li class="team-item">
                     <img src="./images/pic1.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="features-title">Mark Guerrero</h3>
+                    <p class="feature-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/pic2.jpg" alt="Tom Ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="features-title">Tom Ford</h3>
+                    <p class="feature-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/pic3.jpg" alt="Camila Garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="features-title">Camila Garcia</h3>
+                    <p class="feature-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/pic4.jpg" alt="Daniel Wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="features-title">Daniel Wilson</h3>
+                    <p class="feature-text">UI Designer</p>
                 </li>
             </ul>
         </section>
