--- a/index.html
+++ b/index.html
@@ -66,32 +66,31 @@
             </ul>
         </section>
 
-        <section id="section-3"
-        class="our-team">
-            <h2 class="title-team">Our Team</h2>
-            <ul clas="team-list">
-                <li class="team-item">
-                    <img src="./images/pic1.jpg" alt="Mark Guerrero" width="264">
-                    <h3 class="features-title">Mark Guerrero</h3>
-                    <p class="feature-text">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/pic2.jpg" alt="Tom Ford" width="264">
-                    <h3 class="features-title">Tom Ford</h3>
-                    <p class="feature-text">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/pic3.jpg" alt="Camila Garcia" width="264">
-                    <h3 class="features-title">Camila Garcia</h3>
-                    <p class="feature-text">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/pic4.jpg" alt="Daniel Wilson" width="264">
-                    <h3 class="features-title">Daniel Wilson</h3>
-                    <p class="feature-text">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+        <<section id="section-3" class="team">
+    <h2 class="team-title">Our Team</h2>
+    <ul class="team-list">
+        <li class="team-item">
+            <img src="./images/pic1.jpg" alt="Mark Guerrero" width="264">
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-role">Product Designer</p>
+        </li>
+        <li class="team-item">
+            <img src="./images/pic2.jpg" alt="Tom Ford" width="264">
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-role">Frontend Developer</p>
+        </li>
+        <li class="team-item">
+            <img src="./images/pic3.jpg" alt="Camila Garcia" width="264">
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-role">Marketing</p>
+        </li>
+        <li class="team-item">
+            <img src="./images/pic4.jpg" alt="Daniel Wilson" width="264">
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-role">UI Designer</p>
+        </li>
+    </ul>
+</section>
         
     </main>
      
