--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </ul>
         </section>
 
-        <<section id="section-3" class="team">
+        <section id="section-3" class="team">
     <h2 class="team-title">Our Team</h2>
     <ul class="team-list">
         <li class="team-item">
