--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
     </header>
 
     <main> 
-        <section id="section-1">
-          <h1>Effective Solutions for Your Business</h1>
-          <button type="button">Order Service</button>
+        <section id="section-1"
+        class="section-1">
+          <h1 class="section-title">Effective Solutions for Your Business</h1>
+          <button type="button"
+          class="order-serv-btn">Order Service</button>
         </section>
         
         <section id="section-2">
