--- a/index.html
+++ b/index.html
@@ -96,42 +96,42 @@
 
 
 <section id="section-4" class="portfolio">
-<h2 class="portfolio-title">Our Portfolio</h2>
+<h2 class="portfolio">Our Portfolio</h2>
 <ul class="portfolio-list">
  <li class="portfolio-item">
-        <img src="./images/port1.jpg" alt="application width="360">
-        <h3 class="portfolio-name">Banking App</h3>
-        <p class="portfolio-desrp">App</p>
+        <img src="./images/port1.jpg" alt="application" width="360">
+        <h3 class="portfolio-title">Banking App</h3>
+        <p class="portfolio-desc">App</p>
     </li>
 
  <li class="portfolio-item">
-     <img src="./images/port2.jpg" alt="Cashless width="360">
-     <h3 class="portfolio-name">Cashless Payment</h3>
-     <p class="portfolio-desrp">Marketing</p>
+     <img src="./images/port2.jpg" alt="Cashless" width="360">
+     <h3 class="portfolio-title">Cashless Payment</h3>
+     <p class="portfolio-desc">Marketing</p>
     </li>
 
   <li class="portfolio-item">
-        <img src="./images/port3.jpg" alt="application width=" 360">
-        <h3 class="portfolio-name">Meditation App</h3>
-        <p class="portfolio-desrp">App</p>
+        <img src="./images/port3.jpg" alt="Meditation" width="360">
+        <h3 class="portfolio-title">Meditation App</h3>
+        <p class="portfolio-desc">App</p>
       </li>
 
 <li class="portfolio-item">
-    <img src="./images/port4.jpg" alt="Cashless width=" 360">
-    <h3 class="portfolio-name">Taxi Service</h3>
-    <p class="portfolio-desrp">Marketing</p>
+    <img src="./images/port4.jpg" alt="Taxi Service" width="360">
+    <h3 class="portfolio-title">Taxi Service</h3>
+    <p class="portfolio-desc">Marketing</p>
 </li>
 
 <li class="portfolio-item">
-    <img src="./images/port5.jpg" alt="application width=" 360">
-    <h3 class="portfolio-name">Screen Illustrations</h3>
-    <p class="portfolio-desrp">Design</p>
+    <img src="./images/port5.jpg" alt="Illustrations' width="360">
+    <h3 class="portfolio-title">Screen Illustrations</h3>
+    <p class="portfolio-desc">Design</p>
 </li>
 
 <li class="portfolio-item">
-    <img src="./images/port6.jpg" alt="Cashless width=" 360">
-    <h3 class="portfolio-name">Online Courses</h3>
-    <p class="portfolio-desrp">Marketing</p>
+    <img src="./images/port6.jpg" alt="Courses" width="360">
+    <h3 class="portfolio-title">Online Courses</h3>
+    <p class="portfolio-desc">Marketing</p>
 </li>
 </ul>
 
