--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </li>
 
 <li class="portfolio-item">
-    <img src="./images/port5.jpg" alt="Illustrations' width="360">
+    <img src="./images/port5.jpg" alt="Illustrations" width="360">
     <h3 class="portfolio-title">Screen Illustrations</h3>
     <p class="portfolio-desc">Design</p>
 </li>
