--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main> 
         <section id="section-1"
-        class="section-1">
+        class="section-one">
           <h1 class="section-title">Effective Solutions for Your Business</h1>
           <button type="button"
           class="order-serv-btn">Order Service</button>
